# nomanga

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/: biome.json  components.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: globals.css  main.tsx  routeTree.gen.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
client/src-tauri/src/commands/: history.rs  library.rs  mod.rs  settings.rs  source.rs  startup.rs
client/src/components/nav/: index.tsx  main.tsx
client/src/components/settings/: index.tsx  nav.tsx  sections.tsx  sidebar.tsx
client/src/components/settings/components/: index.tsx  parts.tsx
client/src/components/settings/sections/: appearance.tsx  reader.tsx  system.tsx
client/src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  stepper.tsx
client/src/hooks/services/: use-settings.ts  use-sources.ts
client/src/lib/: unwrap.ts
client/src/providers/: index.tsx  query.tsx  theme.tsx
client/src/routes/: __root.tsx  _app.tsx  read.$sourceId.$mangaId.$chapterId.tsx
client/src/routes/_app/: library.tsx  manga.$sourceId.$mangaId.tsx
client/src/routes/_app/browse/: $sourceId.tsx  index.tsx
client/src/types/: bindings.ts
extensions/extension_example/: Cargo.toml
extensions/extension_example/src/: lib.rs
extensions/extension_example/src/sources/: mod.rs
extensions/extension_example/src/sources/weebcentral/: mod.rs  parser.rs  util.rs
