[workspace]
resolver = "3"
members = ["client/src-tauri", "packages/*", "extensions/*", "cli"]
default-members = ["client/src-tauri", "packages/*", "cli"]

[profile.release]
lto = true
opt-level = "z"
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.1.1", features = ["display", "from_str", "into"] }
validator = { version = "0.20.0", features = ["derive"] }
