[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
debug = true

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

nomanga-core = { path = "../../packages/core", features = ["typescript"] }
nomanga-services =  { path = "../../packages/services", features = ["typescript"] }

tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "collect"] }
specta-typescript = "0.0.12"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
